[package]
name = "sorting-hat"
description = "A terminal user interface for visualizing sorting algorithms"
version = "0.1.0"
authors = ["Anthony Morris <anthony@amorrissound.com>"]
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["sorting", "algorithms", "tui", "cli", "terminal"]
homepage = "https://github.com/amorriscode/sorting-hat"
documentation = "https://github.com/amorriscode/sorting-hat"
repository = "https://github.com/amorriscode/sorting-hat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.12"
termion = "1.5"
